--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <div class="container">
   <div class="jumbotron">
     <h1 class="display-3">Hello, Vinay!</h1>
-    <p class="lead" appHighlight>Created this component manually for fun</p>
+    <p class="lead">Created this component manually for fun</p>
   </div>
 </div>
 
-<div class="componenet-div">
+<div class="app-component-container">
   <app-user></app-user>
   <app-client></app-client>
 </div>
