--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" style="max-width: 350px;">
     <div class="card-body">
       <h3 class="font-weight-bold">Component User</h3>
       <p class="font-weight-lighter">
