Task 2 on Services and Routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
   <div class="jumbotron">
     <h1 class="display-3">Hello, Vinay!</h1>
     <p class="lead">Created this component manually for fun</p>
@@ -8,4 +8,16 @@
 <div class="app-component-container">
   <app-user></app-user>
   <app-client></app-client>
+</div> -->
+
+
+<div class="nav-bar">
+    <div><a routerLink="/">Home</a></div>
+    <div routerLinkActive="active"><a routerLink="Active">Active</a></div>
+    <div routerLinkActive="active"><a routerLink="Deleted">Deleted</a></div>
+    <div routerLinkActive="active"><a routerLink="Manage">Manage</a></div>
 </div>
+
+<hr style="width: 90%; margin-top: 5px; margin-bottom: 10px; border: none;border-top: 1px solid gainsboro;">
+
+<router-outlet></router-outlet>
