--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,42 @@
-.app-component-container {
+/* .app-component-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+} */
+
+.box {
+    border: 1px solid orangered;
+    border-radius: 10px;
+    padding: 10px;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 20px;
+    font-family: calibri;
+    font-size: large;
+}
+
+div {
+    margin-bottom: 5px;
+}
+
+.active {
+    font-weight: 600;
+}
+
+.nav-bar {
+    display: flex;
+    justify-content: flex-end;
+    padding: 10px;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 20px;
+    font-family: calibri;
+    font-size: x-large;
+}
+
+a {
+    text-decoration: none;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 20px;
 }
