--- a/src/app/deleted/deletedusercomp/deletedusercomp.component.html
+++ b/src/app/deleted/deletedusercomp/deletedusercomp.component.html
@@ -2,7 +2,7 @@
     <div *ngIf="user.isDeleted" class="box">
         <div>{{user.firstName}} {{user.lastName}}</div>
         <p align="right">
-            <input type="button" class="btn btn-success" value="Active" />
+            <input type="button" class="btn btn-success" value="Activate"/>
         </p>
     </div>
 </div>
