--- a/src/app/shared/users-list/users-list.component.html
+++ b/src/app/shared/users-list/users-list.component.html
@@ -1,7 +1,3 @@
 <div *ngFor="let user of usersList">
-    <app-user [user]="user" [route]="route" *ngIf="
-    (route === 'active-users' && !user.isDeleted)||
-    (route === 'deleted-users' && user.isDeleted)||
-    (route == 'manage-users')">
-    </app-user>
+    <app-user [user]="user" [showDetails]="showDetails"></app-user>
 </div>
