--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,10 +2,6 @@
     font-weight: 600;
 }
 
-div {
-    margin-bottom: 5px;
-}
-
 .nav-bar {
     display: flex;
     justify-content: flex-end;
@@ -14,12 +10,20 @@ div {
     margin-right: 5%;
     margin-top: 20px;
     font-family: calibri;
-    font-size: x-large;
+    font-size: 25px;
 }
 
 a {
     text-decoration: none;
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     margin-right: 20px;
+}
+
+hr{
+    width: 90%;
+    margin-top: 5px; 
+    margin-bottom: 10px; 
+    border: none;
+    border-top: 1px solid gainsboro;
 }
