--- a/src/app/deleted-users/deleted-users/deleted-users.component.html
+++ b/src/app/deleted-users/deleted-users/deleted-users.component.html
@@ -1,1 +1,1 @@
-<app-users-list [route]="route"></app-users-list>
+<app-users-list [usersList]="usersList" [showDetails]="showDetails"></app-users-list>
