--- a/src/app/manage-users/all-users/all-users.component.html
+++ b/src/app/manage-users/all-users/all-users.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col col-md-6 col-sm-6">
-        <app-users-list [route]="route"></app-users-list>
+        <app-users-list [usersList]="usersList" [showDetails]="showDetails"></app-users-list>
     </div>
     <div class="col col-md-6 col-sm-6">
         <router-outlet></router-outlet>
