implemented the proper structured code and did some changes

--- a/src/app/active-users/active-users/active-users.component.html
+++ b/src/app/active-users/active-users/active-users.component.html
@@ -1,1 +1,1 @@
-<app-users-list [usersList]="usersList" [showDetails]="showDetails"></app-users-list>
+<app-users-list [usersList]="activeUsersList" [showDetails]="showDetails" (changeStatus)="deactivateUser($event)"></app-users-list>
