--- a/src/app/shared/user/user.component.css
+++ b/src/app/shared/user/user.component.css
@@ -1,10 +1,18 @@
-.card{
+.card {
     margin-left: 10%;
     margin-right: 10%;
     margin-top: 15px;
     padding: 10px 10px 0px 10px;
 }
 
-.user-name{
+.active-card {
+    border: 1px solid greenyellow;
+}
+
+.deleted-card {
+    border: 1px solid red;
+}
+
+.user-name {
     font-size: large;
 }
