--- a/src/app/shared/user/user.component.html
+++ b/src/app/shared/user/user.component.html
@@ -1,23 +1,10 @@
-<div class="card" [ngStyle]="{'border': '1px solid greenyellow'}" *ngIf="!user.isDeleted && showDetails === false">
-    <div class="user-name">{{user?.firstName}} {{user?.lastName}}</div>
-    <div class="btn-div">
-        <p align="right"><button class="btn btn-danger"
-                (click)="onClickButton();ButtonClickedEvent.emit();">Deactivate</button></p>
-    </div>
-</div>
-
-<div class="card" [ngStyle]="{'border': '1px solid red'}" *ngIf="user.isDeleted && showDetails === false">
-    <div class="user-name">{{user?.firstName}} {{user?.lastName}}</div>
-    <div class="btn-div">
-        <p align="right"><button class="btn btn-success"
-                (click)="onClickButton();ButtonClickedEvent.emit();">Activate</button></p>
-    </div>
-</div>
-
-<div class="card" [ngStyle]="{'border': user.isDeleted?'1px solid red':'1px solid yellowgreen', 'margin-right': '0%'}"
-    *ngIf="showDetails === true">
-    <div class="user-name">{{user?.firstName}} {{user?.lastName}}</div>
-    <div class="btn-div">
-        <p align="right"><button class="btn btn-primary" (click)="onClickButton(user.id)">Show Details</button></p>
-    </div>
+<div class="card" class="{{user.isDeleted ? 'deleted-card' : 'active-card'}}">
+    <div class="user-name">{{user.firstName + " "+ user.lastName}}</div>
+    <p align="right">
+        <button 
+        class="{{showDetails ? 'btn btn-primary' : 
+            (user.isDeleted ? 'btn btn-success' : 'btn btn-danger')}}"
+        (click)="modifyStatus(user.id)">{{showDetails ? 'Details' : (user.isDeleted ? 'Activate' : 'Deactivate')}}
+        </button>
+    </p>
 </div>
