--- a/src/app/shared/users-list/users-list.component.html
+++ b/src/app/shared/users-list/users-list.component.html
@@ -1,3 +1,3 @@
 <div *ngFor="let user of usersList">
-    <app-user [user]="user" [showDetails]="showDetails"></app-user>
+    <app-user [user]="user" [showDetails]="showDetails" (changeStatus)="modifyStatus($event)"></app-user>
 </div>
