--- a/src/app/manage-users/all-users/all-users.component.html
+++ b/src/app/manage-users/all-users/all-users.component.html
@@ -1,3 +1,4 @@
+<p align="right" ><button class="btn btn-success">Create</button></p>
 <div class="row">
     <div class="col col-md-6 col-sm-6">
         <app-users-list [usersList]="AllUsersList" [showDetails]="showDetails" (changeStatus)="showUserDetails($event)"></app-users-list>
