--- a/src/app/deleted-users/deleted-users/deleted-users.component.html
+++ b/src/app/deleted-users/deleted-users/deleted-users.component.html
@@ -1,1 +1,1 @@
-<app-users-list [usersList]="deletedUsersList" [showDetails]="showDetails" (changeStatus)="activateUser($event)"></app-users-list>
+<app-users-list [usersList]="deletedUsersList$ | async" [showDetails]="showDetails" (changeStatus)="activateUser($event)"></app-users-list>
