--- a/src/app/manage-users/all-users/all-users.component.html
+++ b/src/app/manage-users/all-users/all-users.component.html
@@ -1,7 +1,8 @@
-<p align="right" ><button class="btn btn-success">Create</button></p>
+<p align="right"><button class="btn btn-success" (click)="createUser()">Create</button></p>
 <div class="row">
     <div class="col col-md-6 col-sm-6">
-        <app-users-list [usersList]="AllUsersList" [showDetails]="showDetails" (changeStatus)="showUserDetails($event)"></app-users-list>
+        <app-users-list [usersList]="allUsersList$ | async" [showDetails]="showDetails"
+            (changeStatus)="showUserDetails($event)" (detailsChange)="editUserDetails($event)"></app-users-list>
     </div>
     <div class="col col-md-6 col-sm-6">
         <router-outlet></router-outlet>
