--- a/src/app/shared/user/user.component.css
+++ b/src/app/shared/user/user.component.css
@@ -2,7 +2,7 @@
     margin-left: 10%;
     margin-right: 10%;
     margin-top: 15px;
-    padding: 10px 10px 0px 10px;
+    padding: 10px 10px 10px 10px;
 }
 
 .active-card {
@@ -15,4 +15,11 @@
 
 .user-name {
     font-size: large;
+}
+
+.internal-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:space-between;
+    margin-top: 5px;
 }
