--- a/src/app/shared/forms/create-form/create-form.component.html
+++ b/src/app/shared/forms/create-form/create-form.component.html
@@ -1,24 +1,24 @@
 <div class="main-container">
-    <form>
+    <form class="container" [formGroup]="createForm">
         <div class="form-group">
             <label>First Name</label>
-            <input type="text" class="form-control" placeholder="Enter your first name">
+            <input type="text" class="form-control" placeholder="Enter your first name" formControlName="firstName">
         </div>
         <div class="form-group">
             <label>Last Name</label>
-            <input type="text" class="form-control" placeholder="Enter your last name">
+            <input type="text" class="form-control" placeholder="Enter your last name" formControlName="lastName">
         </div>
         <div class="form-group">
             <label>Login</label>
-            <input type="text" class="form-control" placeholder="Enter the login">
+            <input type="text" class="form-control" placeholder="Enter the login" formControlName="login">
         </div>
         <div class="form-group">
             <label>Password</label>
-            <input type="password" class="form-control" placeholder="Enter the password">
+            <input type="password" class="form-control" placeholder="Enter the password" formControlName="password">
         </div>
         <div class="form-group">
             <label>Age</label>
-            <input type="number" class="form-control" placeholder="Enter your age">
+            <input type="number" class="form-control" placeholder="Enter your age" formControlName="age">
         </div>
         <button type="submit" class="btn btn-primary" (click)="createNewUser()">Submit</button>
     </form>
