--- a/src/app/shared/forms/update-form/update-form.component.html
+++ b/src/app/shared/forms/update-form/update-form.component.html
@@ -1,14 +1,14 @@
 <div class="main-container">
-    <form>
-        <h3 class="font-weight-bold">{{user?.firstName}} {{user?.lastName}}</h3>
+    <form class="container" [formGroup]="updateForm">
+        <h3 class="font-weight-bold">{{currentUser?.firstName}} {{currentUser?.lastName}}</h3>
         <div class="form-group">
             <label>Password</label>
-            <input type="password" class="form-control" placeholder="Enter the password">
+            <input type="text" class="form-control" placeholder="Enter the password" formControlName="password">
         </div>
         <div class="form-group">
             <label>Age</label>
-            <input type="number" class="form-control" placeholder="Enter your age">
+            <input type="number" class="form-control" placeholder="Enter your age" formControlName="age">
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary" (click)="updateUser()">Submit</button>
     </form>
 </div>
