form change commit

--- a/src/app/shared/forms/update-form/update-form.component.html
+++ b/src/app/shared/forms/update-form/update-form.component.html
@@ -1,6 +1,6 @@
 <div class="main-container">
-    <form class="container" [formGroup]="updateForm">
-        <h3 class="font-weight-bold">{{currentUser?.firstName}} {{currentUser?.lastName}}</h3>
+    <form class="container" >
+        <h3 class="title-area">{{currentUser?.firstName}} {{currentUser?.lastName}}</h3>
         <div class="form-group">
             <label>Password</label>
             <input type="text" class="form-control" placeholder="Enter the password" formControlName="password">
