--- a/src/app/shared/users-details/users-details.component.html
+++ b/src/app/shared/users-details/users-details.component.html
@@ -1,6 +1,6 @@
 <div class="card">
     <div class="card-body">
-        <h3 class="font-weight-bold">{{user?.firstName}} {{user?.lastName}}</h3>
+        <h3 class="title-area">{{user?.firstName}} {{user?.lastName}}</h3>
         <div [ngStyle]="{'color': user.isDeleted?'red':'greenyellow'}">{{user?.isDeleted?'Deleted':'Active'}}</div>
         <hr style="margin-bottom: 25px;">
         <div class="row">
