--- a/src/app/manage-users/manage-user-updation/manage-user-updation.component.html
+++ b/src/app/manage-users/manage-user-updation/manage-user-updation.component.html
@@ -1,4 +1,4 @@
 <app-main-form 
     [currentUser]="currentUser" 
-    (valuesSubmitted)="updateUser($event)">
+    (onSubmit)="updateUser($event)">
 </app-main-form>
