bug fix on navigating to the list

--- a/src/app/manage-users/all-users/all-users.component.html
+++ b/src/app/manage-users/all-users/all-users.component.html
@@ -5,6 +5,6 @@
             (changeStatus)="showUserDetails($event)" (detailsChange)="editUserDetails($event)"></app-users-list>
     </div>
     <div class="col col-md-6 col-sm-6">
-        <router-outlet (listChanged)="refresh()"></router-outlet>
+        <router-outlet></router-outlet>
     </div>
 </div>
